cmake_minimum_required(VERSION 3.13)
project(Pazaak)

set(CMAKE_CXX_STANDARD 14)

add_executable(Pazaak main.cpp "Source/Cards/CardInterface/Card.cpp" "Source/Cards/CardInterface/Card.h" "Source/Cards/CardImplementations/BasicCard/BasicCard.cpp" "Source/Cards/CardImplementations/BasicCard/BasicCard.h" "Source/Cards/CardImplementations/DualCard/DualCard.cpp" "Source/Cards/CardImplementations/DualCard/DualCard.h" "Source/Cards/CardImplementations/DoubleCard/DoubleCard.cpp" "Source/Cards/CardImplementations/DoubleCard/DoubleCard.h" "Source/Cards/CardImplementations/DualCard/FlexCard/FlexCard.cpp" "Source/Cards/CardImplementations/DualCard/FlexCard/FlexCard.h" Source/Player/PlayerBoard/PlayerBoard.cpp Source/Player/PlayerBoard/PlayerBoard.h "Source/Cards/CardImplementations/DualCard/FlipCard/FlipCard.cpp" "Source/Cards/CardImplementations/DualCard/FlipCard/FlipCard.h" Source/Player/Player.cpp Source/Player/Player.h Source/Deck/Deck.cpp Source/Deck/Deck.h Source/Player/Hand/Hand.cpp Source/Player/Hand/Hand.h)